Borrar productos en funcionamiento

--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -11,7 +11,7 @@
         </div>
         <div class="column dos">
             <div class="product-size" data-product="{{product.talle}}">Talle: {{product.talle}}</div>
-            <div class="product-trash"><i class="fa-solid fa-trash"></i></div>
+            <!--<div class="product-trash"><i class="fa-solid fa-trash"></i></div>-->   
         </div>
     </div>
 </div>
