--- a/templates/type_del_admin.html
+++ b/templates/type_del_admin.html
@@ -5,20 +5,35 @@ Eliminar Tipo - C🎀​S - ADMIN
 {% endblock %}   
 
 {% block admin %}
+<div class="admin-form">
     <h1>Confirmar Eliminación</h1>
     <p>¿Estás seguro de que deseas eliminar el tipo <b>{{ object.tipo }}</b>?</p>
-    <form method="post">
+    <form method="post" class="admin-delete">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Eliminar</button>
-        <button>
-            <a href="{% url 'categorias_admin' %}">Cancelar</a>
-        </button>
+        <!-- {{ form.as_p }} -->
+        <div class="login-form">
+            <label for="id_confirm_delete"><strong>Confirme la eliminación</strong></label>
+            <input
+                type="checkbox"
+                class="form-control"
+                id="id_confirm_delete"
+                name="confirm_delete"
+                required
+            />
+        </div>
+        <div class="cont-btn-admin">
+            <button type="submit" class="btn login-button">Eliminar</button>
+        </div>
     </form>
+        <div class="logout-cancel">
+        <a href="{% url 'categorias_admin' %}">
+            <button class="btn login-button">Cancelar</button></a>
+        </div>
 
     {% for message in messages %}
         <div class="error-cont">
             <p class="error-message">{{ message }}</p>
         </div>
     {% endfor %}
+</div>
 {% endblock %}
