--- a/templates/base.html
+++ b/templates/base.html
@@ -52,9 +52,10 @@
             </div>
         </div>
     </header>
+    <main>
         {% block content %}
         {% endblock %}
-
+    </main>
     <footer>
         <div class="footer-conteiner">
             <div class="footer-column">
