--- a/templates/type_ne_admin.html
+++ b/templates/type_ne_admin.html
@@ -9,13 +9,24 @@
 {% endblock %}
 
 {% block admin %}
-<h1>{% if form.instance.pk %}Editar Tipo{% else %}Crear Nuevo Tipo{% endif %}</h1>    
-    <form method="post">
+<div class="product-form">
+    <h1>{% if form.instance.pk %}Editar Tipo{% else %}Crear Nuevo Tipo{% endif %}</h1>    
+    <form method="post" class="admin-delete">
         {% csrf_token %}
-        <div class="login-form">
+        <!-- <div class="login-form">
             {{ form.as_p }}
+        </div> -->
+        <div class="login-form">
+            <label for="id_tipo"><strong>Tipo</strong></label>
+                {{form.tipo}}
         </div>
-        <button type="submit">{% if form.instance.pk %}Actualizar{% else %}Crear{% endif %}</button>
+        <div class="login-form">
+            <label for="id_categoria_nom"><strong>Categoria</strong></label>
+                {{form.categoria_nom}}
+        </div>
+        <div class="cont-btn-admin">
+            <button type="submit" class="btn login-button">{% if form.instance.pk %}Actualizar{% else %}Crear{% endif %}</button>
+        </div>
     </form>
 
     {% for message in messages %}
@@ -23,4 +34,5 @@
             <p class="error-message">{{ message }}</p>
         </div>
     {% endfor %}
+</div>
 {% endblock %}
