--- a/templates/cart.html
+++ b/templates/cart.html
@@ -7,24 +7,24 @@
 {% load static %}
 <div class="cart">
     <div class="title-cart">
-        <h1>Mi Carro</h1>
-        <p>🎀 🛒 🎀</p>
+        <h1 class="title-cart">Mi Carro</h1>
+        <p class="title-cart">🎀 🛒 🎀</p>
         <div class="total-cont">
-            <h3>Total:</h3>
+            <h3 class="total">Total:</h3>
             <h3 id="total-compra">$ {{ total_compra }}</h3>
         </div>
     </div>
-    <div class="detail-cart">
+    <div class="detail-cart-cont">
         <div class="cart-products">
             {% if cart %}
                 {% for product in cart %}
                     <div class="cart-item" id="cart-item-{{ product.id }}">
                         {% include 'product_card.html' %}
-                        <button class="remove-from-cart" data-item-id="{{ product.id }}">
+                        <!-- <button class="remove-from-cart" data-item-id="{{ product.id }}">
                             <i class="fa fa-trash"></i> Borrar
-                        </button>
+                        </button> -->
                     </div>
-                    <br>
+                    <!-- <br> -->
                 {% endfor %}
             {% else %}
                 <span>Aún no añadiste productos al carro</span>
