--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -1,17 +1,29 @@
 {% load static %}
-<article class="product" id="product">
+<article class="product" id="product-cart">
 <div class="product-one carro-product">
-    
-    <img class="product-image" src="{% static 'calzado/' %}{{ product.calzado.tipo_calzado.categoria_nom }}/{{ product.calzado.tipo_calzado }}/{{ product.calzado.codigo }}/{{ product.calzado.codigo }}.jpg" alt="{{ product }}" >
-    <div class="detail-cont">
-        <div class="detail column">
-            <div class="product-title" data-product="{{product.calzado.pk}}"><h4>{{product.calzado.nombre}}</h4></div>
-            
-            <div class="product-price">${{product.calzado.precio}}</div>
+    <div class="img-cart-cont">
+        <img class="cart-image" src="{% static 'calzado/' %}{{ product.calzado.tipo_calzado.categoria_nom }}/{{ product.calzado.tipo_calzado }}/{{ product.calzado.codigo }}/{{ product.calzado.codigo }}.jpg" alt="{{ product }}" >
+    </div>
+    <div class="detail-cont-cart">
+        <div class="row">
+            <div class="detail-cart">
+                <div class="product-title" data-product="{{product.calzado.pk}}">
+                    <h4>{{product.calzado.nombre}}</h4>
+                </div>
+                <div class="product-size" data-product="{{product.talle}}">Talle: {{product.talle}}</div>
+                
+            </div>
         </div>
-        <div class="column dos">
-            <div class="product-size" data-product="{{product.talle}}">Talle: {{product.talle}}</div>
-            <!--<div class="product-trash"><i class="fa-solid fa-trash"></i></div>-->   
+        <div class="row">
+            <div class="detail-cart">
+                <div class="product-price">${{product.calzado.precio}}</div>
+                <!--<div class="product-trash"><i class="fa-solid fa-trash"></i></div>-->
+                <div class="trash-cont">
+                    <button class="remove-from-cart" data-item-id="{{ product.id }}">
+                        <i class="fa fa-trash"></i> Borrar
+                    </button>  
+                </div> 
+            </div>
         </div>
     </div>
 </div>
