--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,6 @@
                 {% if user.is_authenticated %}
                     {% if user.cliente %}
                     <a id="wish-list" href="#">Lista de Deseos</a>
-                    {% endif %}
                     <a href="{% url 'carrito' %}"><span class="cart">🛒 
                         {% block carro %} 
                             {% if cant_prduct %}
@@ -45,13 +44,13 @@
                             {% else %}
                                 0
                             {% endif %}
-                        {% endblock %}
+                        {% endblock %}</span></a>
+                    {% endif %}
                     <a href="{% url 'confirm_logout' %}">Cerrar Sesion</a>
                 {% else %}
                     <a href="{% url 'register' %}">Crear Cuenta</a>
                     <a href="{% url 'login' %}">Iniciar Sesión</a>
                 {% endif %}
-                </span></a>
             </div>
         </div>
     </header>
